# camazotz

./: Gemfile  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
