[project]
name = "camazotz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask==0.5",
  "lxml==4.6.0",
  "django==3.2.25",
  "pillow==8.3.0",
  "requests==2.27.0",
  "cryptography==38.0.0",
  "pyyaml==5.3.1",
  "jinja2==3.0.0",
  "setuptools==65.5.0",
]
